--- a/technology.html
+++ b/technology.html
@@ -26,7 +26,7 @@
               <span aria-hidden="true">00</span> Home</a></li>
           <li><a class="fs-300 uppercase text-white letter-spacing-2 ff-sans-cond"  href="destination.html">
               <span aria-hidden="true">01</span> Destination</a></li>
-          <li><a class="uppercase text-white letter-spacing-2 ff-sans-cond"  href="crew.html">
+          <li><a class=" fs-300 uppercase text-white letter-spacing-2 ff-sans-cond"  href="crew.html">
               <span aria-hidden="true">02</span> Crew</a></li>
           <li class="active"><a class="fs-300 uppercase text-white letter-spacing-2 ff-sans-cond"  href="technology.html">
               <span aria-hidden="true">03</span> Technology</a></li>
